--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mockdev": "npm run mock | npm run dev"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.19.0",
     "vue": "^2.5.16",
     "vue-awesome-swiper": "^2.5.0",
     "vue-infinite-loading": "^2.1.3",
@@ -26,6 +26,7 @@
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "atob": "^2.1.2",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -37,13 +38,14 @@
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
+    "chokidar": "^3.0.2",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
+    "eslint": "^6.3.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
@@ -68,6 +70,7 @@
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "mixin-deep": "^2.0.1",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.3",
@@ -79,6 +82,7 @@
     "sass-loader": "^6.0.5",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "set-value": "^3.0.1",
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
@@ -87,7 +91,7 @@
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.6.0",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
